# aerome

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: aerome.desktop  future.desktop
assets/scripts/mac_os/: trash.sh
prompts/: communicate.pr  communicate.test.yml  describe.pr
prompts/sessions/: actions  describe
src/: compress.rs  constants.rs  file_transfer.rs  file_watcher.rs  icons.rs  ipc.rs  location.rs  main.rs  models.rs  send_to.rs  store.rs  thumbnails.rs  trash.rs
src/models/: mod.rs  models.rs
src/prompts/: communicate.pr  communicate.test.yml  conversation.pr  conversation.test.yml  failed  mod.rs  react.pr  react.test.yml  search  summary.pr
www/: index.html  privacy_policy.html  privacy_policy.md  test.json  tos.html  tos.md
