[package]
name = "future"
version = "0.1.0"
edition = "2021"
description = "A file manager from the future"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
derive_more = "0.99.17"
dirs = "5.0.0"
http = "0.2.9"
image = "0.24.6"
md5 = "0.7.0"
mime = "0.3.17"
png = "0.17.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["process", "rt", "full"] }
url = { version = "2.3.1", features = ["serde"] }
wry = { version = "0.27.3", features = ["transparent"] }
xdg-mime = "0.3.3"

[package.metadata.bundle]
identifier = "com.prlang.future"
icon = [
    "assets/icon/icon.png"
]
